# cc-auto

./: .gitignore  README.md  README_zh.md  cca  config.yaml  hook-settings.json  install.ps1  install.sh  pyproject.toml  safe-hook.sh  test.ps1  test.sh
cca/: cli.py  config.py  detector.py  judge.py  monitor.py  prompt.py  wizard.py
