[project]
name = "cca"
version = "0.1.0"
description = "Claude Code auto-confirmation tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "pexpect",
    "pyyaml",
    "requests",
]

[project.scripts]
cca = "cca.cli:main"

[project.urls]
Repository = "https://github.com/LehaoLin/cc-auto"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
